--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": [
+      "node",
+      "webpack-env" // For error: Property 'context' does not exist on type 'NodeRequire'
+    ]
   },
   "include": [
     "src"
