--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
+    "@types/react-leaflet": "^3.0.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,6 @@
     "redux": "^4.2.1",
     "sass": "^1.63.4",
     "split-text-js": "^1.0.3",
-    "typescript": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
